Animation in heading, minor whitespace fixes

--- a/src/components/ExperienceSection.module.scss
+++ b/src/components/ExperienceSection.module.scss
@@ -5,7 +5,7 @@
     color: $color-white;
     background: $color-blue-3;
     z-index: 1;
-    padding: $spacing-4;
+    padding: $spacing-6 $spacing-3;
 
     @include media-breakpoint-up(md) {
         padding: $spacing-6;
@@ -29,6 +29,7 @@
         font-size: $font-size-9;
         position: sticky;
         top: 0;
+        padding: 0 $spacing-1;
 
         @include media-breakpoint-up(lg) {
             font-size: vw($font-size-8, lg);
@@ -50,7 +51,7 @@
     background: $color-blue-3;
     z-index: 1;
     position: relative;
-    margin-top: $spacing-8;
+    margin-top: $spacing-6;
 
     @include media-breakpoint-up(lg) {
         margin-top: $spacing-10;
